<resources>
    <string name="app_name">Dayz</string>
    <string name="category_decoration">Dekorasiya</string>
    <string name="category_photograph">Foto/Video</string>
    <string name="category_dance_show">Şou</string>
    <string name="welcome">Xoş gəldin! 👋🏼</string>
    <string name="categories">Kateqoriyalar</string>
    <string name="price_starts_at">%1$s ₼</string>
    <string name="popular_offers">Populyar təkliflər</string>
    <string name="offer_detail_info">Məlumat</string>
    <string name="offer_detail_contact">Əlaqə məlumatları</string>
    <string name="explore_now">Elə indi kəşf et</string>
    <string name="all">Hamisi</string>
    <string name="contact_us">Əlaqə saxla</string>
    <string name="other">Digər</string>
    <string name="privacy_policy">Gizlilik şərtləri</string>
    <string name="social_accounts">Sosial media</string>
    <string name="phone_number">Mobil nömrə</string>
    <string name="email">E-mail</string>
    <string name="instagram">Instagram</string>
    <string name="dayz_support">Dayz - Support</string>
    <string name="contact_on_whatsapp">Whatsapp-da yaz</string>
    <string name="call">Zəng et</string>
    <string name="facebook">Facebook</string>
    <string name="open_vendor_info">Daha çox</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="settings">Tənzimləmələr</string>
    <string name="app_language">Tətbiq dili</string>
    <string name="azerbaijan">Azərbaycan dili</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="empty">\"\"</string>
    <string name="min_price">Min</string>
    <string name="max_price">Max</string>
    <string name="attention">Diqqet</string>
    <string name="sure_to_delete">Hamısını silmək istədiyinizə əminsiniz?</string>
    <string name="vendor_detail">Haqqında</string>
    <string name="vendor_gallery">Qalereya</string>
    <string name="vendor_contact">Əlaqə</string>
    <string name="favourites">Şeçilmişlər</string>
    <string name="filter">Filtr</string>
    <string name="price_interval">Qiymət aralığı</string>
    <string name="make_filter">Filtr et</string>
    <string name="clear_filter">Filtri sıfırla</string>
    <string name="notifications">Bildirişlər</string>
    <string name="onbaord_title">Tədbirinizi bizimlə asanlıqla təşkil edin</string>
    <string name="onbaord_subtitle">Siz tərəfdaşlara filtr tətbiq edə və özünüzə uyğun olanı tapa bilərsiniz</string>
    <string name="browse">Kəşf et</string>
    <string name="search_by_name">Ada görə axtarın</string>
    <string name="app_icon">Tətbiq ikonu</string>
    <string name="dayz_black">Dayz Black</string>
    <string name="dayz_white">Dayz White</string>
    <string name="appearance">Görünüş</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="default_mode">System default</string>
    <string name="no_notifications">Sizin bildirişiniz yoxdur</string>
    <string name="no_favourites">Sizin seçilmiş partnyorunuz yoxdur</string>
    <string name="no_notification_description">Siz yeni kateqoriyalar, partnyorlar və digər məlumat haqqında bildirişləri burada görəcəksiniz</string>
    <string name="no_favourite_description">Siz yeni partnyor əlavə etmək üçün “Kəşf et” səhifəsinə keçid edə bilərsiniz</string>
    <string name="add">Əlavə et</string>
    <string name="no_search_result">Seçdiyiniz filterlərə uyğun partnyor tapılmadı</string>
    <string name="no_search_result_categories">Uyğun kategoriya tapılmadı</string>
    <string name="no_search_result_description">Yeni filter tətbiq elə</string>
</resources>