<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@color/brandColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/onbaord_title"
            android:gravity="center"
            android:textAppearance="@style/title_1_bold_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onbaord_subtitle"
            android:gravity="center"
            android:textAppearance="@style/callout_regular_gray"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.ButtonWithoutInset"
        android:text="@string/explore_now"
        android:theme="@style/AppTheme.ActiveButton"
        android:textAppearance="@style/callout_medium_white"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>