<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/text_black"
        android:background="@color/transparent"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance"
            android:layout_gravity="center"
            android:textAppearance="@style/callout_semi_bold"
            />

    </com.google.android.material.appbar.MaterialToolbar>

    <RadioGroup
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/text_view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RadioButton
            android:id="@+id/lightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_mode"
            android:layoutDirection="rtl"
            android:button="@drawable/radio_button_icon"
            android:paddingVertical="12dp"
            android:drawablePadding="12dp"
            android:drawableEnd="@drawable/ic_light_mode"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <RadioButton
            android:id="@+id/darkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layoutDirection="rtl"
            android:button="@drawable/radio_button_icon"
            android:paddingVertical="12dp"
            android:drawablePadding="12dp"
            android:drawableEnd="@drawable/ic_dark_mode"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <RadioButton
            android:id="@+id/defaultMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_mode"
            android:layoutDirection="rtl"
            android:button="@drawable/radio_button_icon"
            android:paddingVertical="12dp"
            android:drawablePadding="12dp"
            android:drawableEnd="@drawable/ic_default_mode"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>