<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/tools"
    android:background="@color/background"
    android:paddingTop="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/browse"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="20dp"
        android:includeFontPadding="false"
        android:textAppearance="@style/title_3_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favourite"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_background"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        app:queryHint="@string/search_by_name"
        android:gravity="center"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:theme="@style/AppSearchView"
        app:layout_constraintTop_toBottomOf="@+id/title"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:numColumns="2"
        android:verticalSpacing="8dp" />

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:paddingVertical="24dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/text_view_background"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/no_favourite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_search_result_categories"
            android:gravity="center"
            android:textAppearance="@style/body_semi_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_search_result_description"
            android:gravity="center"
            android:textAppearance="@style/sub_headline_regular_gray" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>