<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    android:id="@+id/rootView"
    android:background="@color/transparent"
    tools:context=".presentation.sliderinfo.SliderInfoBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bottom_sheet_background">

        <TextView
            android:id="@+id/filterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filter"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/body_semi_bold"/>

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintTop_toTopOf="@+id/filterTextView"
            app:layout_constraintBottom_toBottomOf="@+id/filterTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/body_semi_bold"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/filterTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/filterBtn">

            <LinearLayout
                android:id="@+id/filterContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/checkBoxLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="24dp"
                    android:visibility="gone"
                    android:orientation="vertical" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/filterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.ButtonWithoutInset"
            android:text="@string/make_filter"
            android:theme="@style/AppTheme.ActiveButton"
            android:textAppearance="@style/callout_medium_white"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/clearFilterBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearFilterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.ButtonWithoutInset"
            android:text="@string/clear_filter"
            android:theme="@style/AppTheme.SecondaryButton"
            android:textAppearance="@style/callout_medium_white"
            android:textColor="@color/buttonTextColor"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>